--- a/server/files/stylesheets/home.css
+++ b/server/files/stylesheets/home.css
@@ -45,6 +45,24 @@
   -webkit-transition: background-color 3s ease 1s;
   transition: background-color 3s ease 1s;
 }
+#example.index .masthead:after {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  content: '';
+  background: url("/images/backgrounds/16.jpg");
+  background-size: cover;
+
+  opacity: 0.7;
+
+  -ms-transition: opacity 12s ease 1.5s;
+  -moz-transition: opacity 12s ease 1.5s;
+  -webkit-transition: opacity 12s ease 1.5s;
+  transition: opacity 12s ease 1.5s;
+}
 
 #example.index .masthead .container {
   margin-left: auto !important;
@@ -55,6 +73,9 @@
   background-color: #2A2A2A;
   animation: none;
   -webkit-animation: none;
+}
+#example.index .masthead.zoomed:after {
+  opacity: 0;
 }
 #example .masthead .container {
   padding: 15rem 0em;
@@ -282,6 +303,9 @@
   -moz-perspective: 500px;
   -webkit-perspective: 500px;
   perspective: 500px;
+
+  text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+
   -moz-transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
@@ -301,7 +325,7 @@
 #example.index .masthead.segment h1 .text {
   display: inline-block;
   font-weight: 300;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.8);
   margin-left: -0.4em;
 }
 #example.index .masthead h2 {
