--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -675,6 +675,7 @@ blockquote .author {
 }
 #example .no.example .anchor + p {
   margin: 0em 0px 1em;
+  padding-bottom: 0em;
 }
 #example .example > p {
   color: rgba(0, 0, 0, 0.8);
