--- a/server/partials/languages.html
+++ b/server/partials/languages.html
@@ -1,17 +1,17 @@
 <div class="scrolling menu">
-  <div class="item" data-percent="100" data-value="en" dadata-text="English" ta-english="English">
+  <div class="item" data-percent="100" data-value="en" data-text="English" data-english="English">
     <span class="description">English</span>
     English
   </div>
-  <div class="item" data-percent="94" data-value="da" datdata-text="dansk" a-english="Danish">
+  <div class="item" data-percent="94" data-value="da" data-text="dansk" data-english="Danish">
     <span class="description">dansk</span>
     Danish
   </div>
-  <div class="item" data-percent="94" data-value="es" datdata-text="Español" a-english="Spanish">
+  <div class="item" data-percent="94" data-value="es" data-text="Español" data-english="Spanish">
     <span class="description">Español</span>
     Spanish
   </div>
-  <div class="item" data-percent="34" data-value="zh" datdata-text="简体中文" a-english="Chinese">
+  <div class="item" data-percent="34" data-value="zh" data-text="简体中文" data-english="Chinese">
     <span class="description">简体中文</span>
     Chinese
   </div>
@@ -19,31 +19,31 @@
     <span class="description">中文 (臺灣)</span>
     Chinese (Taiwan)
   </div>
-  <div class="item" data-percent="79" data-value="fa" datdata-text="پارسی" a-english="Persian">
+  <div class="item" data-percent="79" data-value="fa" data-text="پارسی" data-english="Persian">
     <span class="description">پارسی</span>
     Persian
   </div>
-  <div class="item" data-percent="41" data-value="fr" datdata-text="Français" a-english="French">
+  <div class="item" data-percent="41" data-value="fr" data-text="Français" data-english="French">
     <span class="description">Français</span>
     French
   </div>
-  <div class="item" data-percent="37" data-value="el" datdata-text="ελληνικά" a-english="Greek">
+  <div class="item" data-percent="37" data-value="el" data-text="ελληνικά" data-english="Greek">
     <span class="description">ελληνικά</span>
     Greek
   </div>
-  <div class="item" data-percent="37" data-value="ru" datdata-text="Русский" a-english="Russian">
+  <div class="item" data-percent="37" data-value="ru" data-text="Русский" data-english="Russian">
     <span class="description">Русский</span>
     Russian
   </div>
-  <div class="item" data-percent="36" data-value="de" datdata-text="Deutsch" a-english="German">
+  <div class="item" data-percent="36" data-value="de" data-text="Deutsch" data-english="German">
     <span class="description">Deutsch</span>
     German
   </div>
-  <div class="item" data-percent="23" data-value="it" datdata-text="Italiano" a-english="Italian">
+  <div class="item" data-percent="23" data-value="it" data-text="Italiano" data-english="Italian">
     <span class="description">Italiano</span>
     Italian
   </div>
-  <div class="item" data-percent="21" data-value="nl" datdata-text="Nederlands" a-english="Dutch">
+  <div class="item" data-percent="21" data-value="nl" data-text="Nederlands" data-english="Dutch">
     <span class="description">Nederlands</span>
     Dutch
   </div>
@@ -51,47 +51,47 @@
     <span class="description">Português(BR)</span>
     Portuguese
   </div>
-  <div class="item" data-percent="17" data-value="id" datdata-text="Indonesian" a-english="Indonesian">
+  <div class="item" data-percent="17" data-value="id" data-text="Indonesian" data-english="Indonesian">
     <span class="description">Indonesian</span>
     Indonesian
   </div>
-  <div class="item" data-percent="12" data-value="lt" datdata-text="Lietuvių" a-english="Lithuanian">
+  <div class="item" data-percent="12" data-value="lt" data-text="Lietuvių" data-english="Lithuanian">
     <span class="description">Lietuvių</span>
     Lithuanian
   </div>
-  <div class="item" data-percent="11" data-value="tr" datdata-text="Türkçe" a-english="Turkish">
+  <div class="item" data-percent="11" data-value="tr" data-text="Türkçe" data-english="Turkish">
     <span class="description">Türkçe</span>
     Turkish
   </div>
-  <div class="item" data-percent="10" data-value="kr" datdata-text="한국어" a-english="Korean">
+  <div class="item" data-percent="10" data-value="kr" data-text="한국어" data-english="Korean">
     <span class="description">한국어</span>
     Korean
   </div>
-  <div class="item" data-percent="7"  data-value="ar" datdata-text="العربية" a-english="Arabic">
+  <div class="item" data-percent="7"  data-value="ar" data-text="العربية" data-english="Arabic">
     <span class="description">العربية</span>
     Arabic
   </div>
-  <div class="item" data-percent="6"  data-value="hu" datdata-text="Magyar" a-english="Hungarian">
+  <div class="item" data-percent="6"  data-value="hu" data-text="Magyar" data-english="Hungarian">
     <span class="description">Magyar</span>
     Hungarian
   </div>
-  <div class="item" data-percent="6"  data-value="vi" datdata-text="tiếng Việt" a-english="Vietnamese">
+  <div class="item" data-percent="6"  data-value="vi" data-text="tiếng Việt" data-english="Vietnamese">
     <span class="description">tiếng Việt</span>
     Vietnamese
   </div>
-  <div class="item" data-percent="5"  data-value="sv" datdata-text="svenska" a-english="Swedish">
+  <div class="item" data-percent="5"  data-value="sv" data-text="svenska" data-english="Swedish">
     <span class="description">svenska</span>
     Swedish
   </div>
-  <div class="item" data-precent="4"  data-value="pl" datdata-text="polski" a-english="Polish">
+  <div class="item" data-precent="4"  data-value="pl" data-text="polski" data-english="Polish">
     <span class="description">polski</span>
     Polish
   </div>
-  <div class="item" data-percent="6"  data-value="ja" datdata-text="日本語" a-english="Japanese">
+  <div class="item" data-percent="6"  data-value="ja" data-text="日本語" data-english="Japanese">
     <span class="description">日本語</span>
     Japanese
   </div>
-  <div class="item" data-percent="0"  data-value="ro" datdata-text="românește" a-english="Romanian">
+  <div class="item" data-percent="0"  data-value="ro" data-text="românește" data-english="Romanian">
     <span class="description">românește</span>
     Romanian
   </div>
