Edits from today

--- a/server/partials/examples/list.html
+++ b/server/partials/examples/list.html
@@ -2,7 +2,9 @@
   <div class="column">
     <div class="ui list">
       <div class="item">
-        <img class="ui top aligned avatar image" src="/images/wireframe/square-image.png">
+        <div class="ui top aligned avatar image">
+          <img src="/images/wireframe/square-image.png">
+        </div>
         <div class="content">
           <div class="header">Header</div>
           Description
@@ -25,7 +27,9 @@
         </div>
       </div>
       <div class="item">
-        <img class="ui top aligned avatar image" src="/images/wireframe/square-image.png">
+        <div class="ui top aligned avatar image">
+          <img src="/images/wireframe/square-image.png">
+        </div>
         <div class="content">
           <div class="header">Header</div>
           Description
@@ -75,21 +79,27 @@
 
     <div class="ui divided very relaxed animated list">
       <div class="item">
-        <img class="ui top aligned avatar image" src="/images/wireframe/square-image.png">
+        <div class="ui top aligned avatar image">
+          <img src="/images/wireframe/square-image.png">
+        </div>
         <div class="content">
           <div class="header">Header</div>
           Description
         </div>
       </div>
       <div class="item">
-        <img class="ui top aligned avatar image" src="/images/wireframe/square-image.png">
+        <div class="ui top aligned avatar image">
+          <img src="/images/wireframe/square-image.png">
+        </div>
         <div class="content">
           <div class="header">Header</div>
           Description
         </div>
       </div>
       <div class="item">
-        <img class="ui top aligned avatar image" src="/images/wireframe/square-image.png">
+        <div class="ui top aligned avatar image">
+          <img src="/images/wireframe/square-image.png">
+        </div>
         <div class="content">
           <div class="header">Header</div>
           Description
@@ -168,21 +178,27 @@
 
 <div class="ui horizontal list">
   <div class="item">
-    <img class="ui top aligned avatar image" src="/images/wireframe/square-image.png">
+    <div class="ui top aligned avatar image">
+      <img src="/images/wireframe/square-image.png">
+    </div>
     <div class="content">
       <div class="header">Header</div>
       Description
     </div>
   </div>
   <div class="item">
-    <img class="ui top aligned avatar image" src="/images/wireframe/square-image.png">
+    <div class="ui top aligned avatar image">
+      <img src="/images/wireframe/square-image.png">
+    </div>
     <div class="content">
       <div class="header">Header</div>
       Description
     </div>
   </div>
   <div class="item">
-    <img class="ui top aligned avatar image" src="/images/wireframe/square-image.png">
+    <div class="ui top aligned avatar image">
+      <img src="/images/wireframe/square-image.png">
+    </div>
     <div class="content">
       <div class="header">Header</div>
       Description
@@ -194,21 +210,27 @@
 
 <div class="ui divided relaxed horizontal list">
   <div class="item">
-    <img class="ui top aligned avatar image" src="/images/wireframe/square-image.png">
+    <div class="ui top aligned avatar image">
+      <img src="/images/wireframe/square-image.png">
+    </div>
     <div class="content">
       <div class="header">Header</div>
       Description
     </div>
   </div>
   <div class="item">
-    <img class="ui top aligned avatar image" src="/images/wireframe/square-image.png">
+    <div class="ui top aligned avatar image">
+      <img src="/images/wireframe/square-image.png">
+    </div>
     <div class="content">
       <div class="header">Header</div>
       Description
     </div>
   </div>
   <div class="item">
-    <img class="ui top aligned avatar image" src="/images/wireframe/square-image.png">
+    <div class="ui top aligned avatar image">
+      <img src="/images/wireframe/square-image.png">
+    </div>
     <div class="content">
       <div class="header">Header</div>
       Description
