--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -685,7 +685,7 @@ blockquote .author {
 /* Message */
 #example .example .anchor + p + .ignored.message:not(.attached),
 #example .example .anchor + p + .ignored.message + .ignored.message:not(.attached) {
-  margin: -1.1em 0 2em;
+  margin: 0em 0 2em;
 }
 
 #example .pushing.example .rail .sticky {
@@ -909,6 +909,9 @@ blockquote .author {
   display: none;
   background-color: #F8F8F8;
   box-shadow: 0px 0px 0px 1px #DDDDDD;
+}
+#example .example > .empty.html.segment {
+  padding: 1.15em 1em 1em;
 }
 #example .example > .html.segment > .attached.label {
   display: block;
