--- a/server/partials/footer.html
+++ b/server/partials/footer.html
@@ -19,7 +19,7 @@
           <a class="item" href="http://alpha.semantic-ui.com">0.x Docs</a>
         </div>
       </div>
-      <div class="three wide column">
+   <!--    <div class="three wide column">
         <h4 class="ui inverted header">Learn</h4>
         <div class="ui inverted link list">
           <a href="#" class="disabled item">Example Layouts</a>
@@ -27,8 +27,8 @@
           <a href="#" class="disabled item">Roadmap</a>
           <a href="#" class="disabled item">About the Author</a>
         </div>
-      </div>
-      <div class="seven wide column">
+      </div> -->
+      <div class="seven wide right floated column">
         <h4 class="ui inverted teal header">Help Preserve This Project</h4>
         <p> Support for the continued development of Semantic UI comes directly from the community.</p>
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
